fixed shadows, spacing, new temp background

--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -1,4 +1,5 @@
 .card {
+  float: center;
   font-family: sans-serif;
   border-radius: 4px;
   border: 1px solid #ccc;
